// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputForm should render an Input Form 1`] = `
<div
  aria-describedby={undefined}
  className="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
  minlength={undefined}
  onKeyPress={[Function]}
>
  
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInputBase-input-28 MuiInput-input-13"
      defaultValue={undefined}
      disabled={false}
      id="test"
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder=""
      readOnly={false}
      required={false}
      rows={undefined}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`InputForm should render an Input Form with name 1`] = `
<div
  aria-describedby={undefined}
  className="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
  minlength={undefined}
  onKeyPress={[Function]}
>
  <label
    className="MuiFormLabel-root-42 MuiInputLabel-root-35 MuiInputLabel-formControl-36 MuiInputLabel-animated-39"
    data-shrink={false}
    htmlFor="test"
  >
    name
  </label>
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInputBase-input-28 MuiInput-input-13"
      defaultValue={undefined}
      disabled={false}
      id="test"
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder=""
      readOnly={false}
      required={false}
      rows={undefined}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`InputForm should render an Input Form with type 1`] = `
<div
  aria-describedby={undefined}
  className="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
  minlength={undefined}
  onKeyPress={[Function]}
>
  
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiInputBase-input-28 MuiInput-input-13 MuiInputBase-inputType-31 MuiInput-inputType-16"
      defaultValue={undefined}
      disabled={false}
      id="test"
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder=""
      readOnly={false}
      required={false}
      rows={undefined}
      type="email"
      value=""
    />
  </div>
</div>
`;
